--- a/src/Server/appsettings.json
+++ b/src/Server/appsettings.json
@@ -14,18 +14,9 @@
     "ProxyIP": "",
     "ApplicationUrl": ""
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=BlazorHero.CleanArchitecture;Integrated Security=True;MultipleActiveResultSets=True"
-  },
-  "MailConfiguration": {
-    "From": "info@codewithmukesh.com",
-    "Host": "smtp.ethereal.email",
-    "Port": 587,
-    "UserName": "adaline.pfannerstill49@ethereal.email",
-    "Password": "vAKmWQB8CyPUBg8rBQ",
-    "DisplayName": "Mukesh Murugan"
-  },
-  //For Serilog Configuration, refer https://codewithmukesh.com/blog/serilog-in-aspnet-core-3-1/
+"ConnectionStrings": {
+  "DefaultConnection": "workstation id=IELTSFree.mssql.somee.com;packet size=4096;user id=tanya_SQLLogin_1;pwd=9p73wfbyzc;data source=IELTSFree.mssql.somee.com;persist security info=False;initial catalog=IELTSFree;TrustServerCertificate=True"
+},
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -41,13 +32,6 @@
         "Name": "Console",
         "Args": {
           "outputTemplate": "{Timestamp} [{Level}] {Message}{NewLine:1}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs\\log.txt",
-          "rollingInterval": "Day"
         }
       }
     ],
