--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,21 +19,19 @@ jobs:
       - name: Restore
         run: dotnet restore BlazorHero.CleanArchitecture.sln
 
-      # PUBLISH CLIENT TO ROOT (wwwroot)
       - name: Publish Client
         run: dotnet publish "src/Client/Client.csproj" -c Release -o output --no-restore
 
-      # PUBLISH SERVER TO /api
       - name: Publish Server
         run: dotnet publish "src/Server/Server.csproj" -c Release -o output/api --no-restore
 
-      # DEPLOY
       - name: Deploy
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_BRAVE_BAY_09FFEC10 }}
           action: "upload"
-          app_location: "output"           # ROOT = wwwroot
-          api_location: "output/api"       # API folder
+          app_location: "output"
+          api_location: "output/api"
           skip_app_build: true
           skip_api_build: true
+          skip_deploy_on_missing_secrets: true
