Update solution file in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
       # 3. Restore dependencies
       - name: Restore
-        run: dotnet restore src/Agent_Blazor.sln
+        run: dotnet restore BlazorHero.CleanArchitecture.sln
 
       # 4. Publish Blazor WASM (Client)
       - name: Publish Blazor WASM
