--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore
-        run: dotnet restore Agent.Blazor.sln
+        run: dotnet restore BlazorHero.CleanArchitecture.sln
 
       - name: Publish Blazor WASM
         run: |
