--- a/src/Client/Client.csproj
+++ b/src/Client/Client.csproj
@@ -13,7 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="wwwroot\**" CopyToPublishDirectory="PreserveNewest" />
+    <Content Include="wwwroot\**">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
