--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,16 +24,23 @@ jobs:
         run: |
           dotnet publish src/Client/Client.csproj \
             -c Release \
-            -o output/client \
-            --no-restore \
-            /p:UseAppHost=false
+            --self-contained false \
+            /p:UseAppHost=false \
+            /p:PublishTrimmed=false \
+            -o output/client
 
+      - name: Move wwwroot to root
+        run: |
+          mv output/client/wwwroot/* output/client/ || true
+          rmdir output/client/wwwroot || true
+          
+      - name: Verify index.html
+        run: |
+          ls -la output/client/index.html
+    
       - name: Deploy
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
           app_location: "output/client"
-          api_location: ""
-          skip_app_build: true
