Add DotNetJsVersion property to Client.csproj
Added DotNetJsVersion property to the project file.

--- a/src/Client/Client.csproj
+++ b/src/Client/Client.csproj
@@ -7,6 +7,7 @@
     <AssemblyName>BlazorHero.CleanArchitecture.Client</AssemblyName>
     <LangVersion>latest</LangVersion>
     <EnableDefaultContentItems>true</EnableDefaultContentItems>
+    <DotNetJsVersion>6.0</DotNetJsVersion>
   </PropertyGroup>
 
   <ItemGroup>
