Update deploy workflow to simplify publish command
Removed self-contained and PublishTrimmed options from the publish command.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,8 @@ jobs:
         run: |
           dotnet publish src/Client/Client.csproj \
             -c Release \
-            --self-contained false \
             /p:UseAppHost=false \
-            /p:PublishTrimmed=false \
+            /p:DotNetJsVersion=6.0 \
             -o output/client
 
       - name: Move wwwroot to root
